# MathTables

./: .gitignore  Cargo.toml  README.md
benches/: math_benchmarks.rs
examples/: advanced_usage.rs  aetheria_cosmic_ai_demo.rs  animation_demo.rs  basic_usage.rs  biology_demo.rs  comprehensive_materials_demo.rs  financial_modeling.rs  graphics_3d_demo.rs  ml_pipeline.rs  plugin_example.rs  signal_analysis.rs  silicone_demo.rs  structural_engineering_demo.rs  tpe_demo.rs
src/: lib.rs
src/core/: framework.rs  mod.rs  traits.rs  types.rs
src/domains/: aetheria.rs  ai_learning.rs  algebra.rs  animation.rs  astronomy.rs  autodiff.rs  biology.rs  calculus.rs  chaos_dynamics.rs  computational_math.rs  constraint_solving.rs  cosmology.rs  cryptography.rs  differential_equations.rs  discrete.rs  discrete_geometry.rs  financial_math.rs  foundations.rs  fuzzy_logic.rs  game_theory.rs  geometric_algebra.rs  geometry.rs  graph_theory.rs  graphics_3d.rs  information_theory.rs  interval_math.rs  language_processing.rs  linear_algebra.rs  machine_learning.rs  mod.rs  modular_arithmetic.rs  number_theory.rs  numerical_analysis.rs  optimization.rs  padic_numbers.rs  philosophy.rs  physics.rs  possibility_theory.rs  sat_smt.rs  signal_processing.rs  (+10 more)
src/plugins/: mod.rs
src/utils/: constants.rs  conversions.rs  mod.rs  validations.rs
tests/: integration_tests.rs  test_animation.rs  test_biology.rs  test_graphics_3d.rs  test_silicone.rs  test_smbo_tpe.rs  test_structural_engineering.rs  test_tpe.rs
