[package]
name = "mathtables"
version = "0.1.0"
edition = "2021"
description = "A comprehensive mathematics framework with extensible domain modules"
license = "MIT"
repository = "https://github.com/your-username/mathtables"
keywords = ["mathematics", "algebra", "geometry", "calculus", "number-theory"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
num-bigint = { version = "0.4", features = ["serde"] }
num-rational = { version = "0.4", features = ["serde"] }
num-complex = { version = "0.4", features = ["serde"] }
nalgebra = { version = "0.32", features = ["serde-serialize"] }
rand = { version = "0.8", features = ["std_rng"] }
rand_distr = "0.4"
rand_pcg = "0.3"
ordered-float = "4.0"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "math_benchmarks"
harness = false

[lib]
name = "mathtables"
path = "src/lib.rs"

[features]
default = ["all-domains"]
all-domains = ["number-theory", "algebra", "geometry", "calculus", "discrete"]
number-theory = []
algebra = []
geometry = []
calculus = []
discrete = []